kubernetes/apps/netbird-exit-node/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-exit-node
  namespace: netbird-exit-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbird-exit-node
  template:
    metadata:
      labels:
        app: netbird-exit-node
    spec:
      containers:
      - name: netbird
        image: netbirdio/netbird:0.76.0
        securityContext:
          # privileged: false
          capabilities:
            add: ["NET_ADMIN", "NET_RAW"]
            drop: ["ALL"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        volumeMounts:
          - name: netbird-config
            mountPath: /var/lib/netbird
          # - name: dev-net-tun
          #   mountPath: /dev/net/tun
      volumes:
      - name: netbird-config
        persistentVolumeClaim:
          claimName: netbird-exit-node
      # - name: dev-net-tun
      #   hostPath:
      #     path: /dev/net/tun
      #     type: CharDevice
