kubernetes/apps/netbird-exit-node/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netbird-exit-isolation
  namespace: netbird-exit-node
spec:
  endpointSelector:
    matchLabels:
      app: netbird-exit-node

  # # --- INKOMMANDE TRAFIK ---
  # ingress:
  #   # 1. Tillåt inkommande P2P WireGuard-handskakningar från alla peers
  #   - fromCIDRSet:
  #       - cidr: "0.0.0.0/0"
  #     toPorts:
  #       - ports:
  #           - port: "51820"
  #             protocol: UDP

  # --- UTGÅENDE TRAFIK ---
  egress:
    # 1. Tillåt DNS-uppslag för kube-dns
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY

    # # 2. Tillåt utgående P2P WireGuard-handskakningar till alla peers
    # - toCIDRSet:
    #     - cidr: "0.0.0.0/0"
    #   toPorts:
    #     - ports:
    #         - port: "51820"
    #           protocol: UDP

    # # 3. IPv4 - NetBird overlay
    # - toCIDRSet:
    #     - cidr: "100.64.0.0/10"

    # 4. IPv4 - Internet (blockera privata IPv4-nät)
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
          except:
            - "10.0.0.0/8"
            - "172.16.0.0/12"
            - "192.168.0.0/16"
            - "169.254.0.0/16"

    # # 5. IPv6 - NetBird overlay
    # - toCIDRSet:
    #     - cidr: "fd00::/8"

    # 6. IPv6 - Internet (blockera privata/link-local IPv6)
    - toCIDRSet:
        - cidr: "::/0"
          except:
            - "fc00::/7"
            - "fe80::/10"
